bridge/aegis_ipc.hpp

struct IpcEvent {
    // Core fields (same as kernel EventHeader for compatibility)
    uint32_t  event_type;       // EventType enum
    uint32_t  source_ip;        // IPv4 source
    uint32_t  dest_ip;          // IPv4 destination
    uint16_t  source_port;      // Source port
    uint16_t  dest_port;        // Destination port
    uint8_t   protocol;         // 6=TCP, 17=UDP, 1=ICMP
    uint8_t   direction;        // 0=inbound, 1=outbound
    uint8_t   layer_id;         // Layer where event originated
    uint8_t   tier_result;      // TierResult — which tier detected this
    uint32_t  payload_length;   // Length of payload data following this header
    uint32_t  rule_id;          // Matched rule ID
    uint32_t  severity;         // Severity enum
    uint32_t  reserved;         // Reserved
    uint64_t  timestamp;        // Event timestamp (milliseconds since epoch)

    // Extended fields (user-mode IPC only)
    uint32_t  source_pid;       // PID of the process that generated this event
    uint32_t  defcon_impact;    // DEFCON level impact (1-5)
};
// ====== Initialization ======
int32_t  aegis_bridge_init();            // Initialize IPC bridge
int32_t  aegis_bridge_shutdown();        // Shutdown IPC bridge
// ====== Event Passing ======
int32_t  aegis_bridge_push_event(const Aegis::Bridge::IpcEvent* event);  // Push event to queue
int32_t  aegis_bridge_pop_event(Aegis::Bridge::IpcEvent* event);        // Pop event from queue
// ====== DEFCON ======
uint8_t  aegis_bridge_get_defcon();                                    // Get current DEFCON level
void     aegis_bridge_update_defcon(uint32_t critical, uint32_t blocked,
                                     uint32_t kernel, uint32_t total);  // Update DEFCON counters
// ====== IPS ======
int32_t  aegis_bridge_block_ip(uint32_t ip);   // Block IP (request to WFP driver)
int32_t  aegis_bridge_unblock_ip(uint32_t ip); // Unblock IP
// ====== Statistics ======
uint32_t aegis_bridge_get_event_count();
uint32_t aegis_bridge_get_dropped_count();
const char* aegis_bridge_get_defcon_label();
const char* aegis_bridge_get_defcon_description();