bridge/aegis_packet_parser.hpp

// Parse a raw packet and return structured result
int32_t aegis_parse_packet(const uint8_t* data, uint32_t dataLen,
                           Aegis::Bridge::IpcEvent* outEvent);
// Check if payload contains NOP sled
int32_t aegis_check_nop_sled(const uint8_t* payload, uint32_t len, uint32_t minSeq);
// Check if packet has malformed headers
int32_t aegis_check_malformed(const uint8_t* data, uint32_t dataLen);